feat: 实现多智能体协作架构与聊天历史管理
- 新增多智能体协作系统（Coach/Critic/Mentor）实现自我修正循环
- 添加SQLite持久化存储支持聊天历史与用户画像
- 实现前端聊天界面改进，支持显示内部思考过程
- 重构后端路由与状态管理，支持多线程对话
- 更新README文档说明系统架构与核心特性

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Project specific
+checkpoints.db
+checkpoints.db-shm
+checkpoints.db-wal
+test.db
+.vercel
+node_modules
+
