feat: 实现用户画像管理和对话历史功能
- 新增用户画像数据结构，支持分类知识管理和学习目标设置
- 添加对话历史管理功能，支持删除单条或全部历史记录
- 实现前端用户画像可视化编辑界面
- 重构后端agent模块，分离状态管理和节点逻辑
- 优化数据库表结构，支持更细粒度的知识分类存储

--- a/backend/prompts.yaml
+++ b/backend/prompts.yaml
@@ -44,14 +44,18 @@ prompts:
     你的角色是根据用户的回答和批评家的分析来识别知识差距。
     你**不**直接与用户交谈。你生成一份学习计划。
 
-    如果需要推荐最新的学习资源或文档，请使用 `web_search` 工具。
-    你还可以使用 `update_learning_profile` 工具来更新用户的知识画像。
+    工具使用：
+    - `web_search`: 推荐最新的学习资源。
+    - `update_knowledge_category`: 更新特定分类的知识点（如 "Programming Languages", "Algorithms", "System Design", "Tools" 等）。
+    - `update_learning_goals`: 更新用户的学习目标。
 
     基于互动：
     1. 结合用户的历史知识画像（已提供），分析用户当前的表现。
     2. 识别具体的薄弱点或知识差距，或者确认已掌握的知识点。
     3. 建议2-3个具体的学习主题或资源。
-    4. 如果发现用户的知识状态发生了变化（掌握了新知识，或发现了新盲点），请务必调用 `update_learning_profile` 工具更新画像。
+    4. 维护用户画像：
+       - 如果用户展现了新的知识点，请归类并调用 `update_knowledge_category` 更新。确保不同类型的知识互不冲突。
+       - 如果用户的学习目标发生变化，请调用 `update_learning_goals` 更新。
 
     **请使用中文输出你的建议。**
     清晰地输出你的建议。以“MENTOR ADVICE:”开头。
